--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Check out
       uses: actions/checkout@v2
     - name: Install deps
-      run: sudo apt-get install icnsutils libxcb-icccm4-dev libxcb-icccm4 freetds-dev libsybdb5 libsybdb5
+      run: sudo apt-get install icnsutils libxcb-icccm4-dev libxcb-icccm4 freetds-dev libsybdb5 libsybdb5 libxcb-image0 libxcb-image0-dev
     - name: Get linuxdeployqt
       run:  wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
     - name: Make linuxdeployqt executable
